Better social login configuration.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -11,6 +11,10 @@ parameters:
     env(FACEBOOK_CLIENT_SECRET):
     env(GOOGLE_CLIENT_ID):
     env(GOOGLE_CLIENT_SECRET):
+    facebook.client_id: '%env(FACEBOOK_CLIENT_ID)%'
+    facebook.client_secret: '%env(FACEBOOK_CLIENT_SECRET)%'
+    google.client_id: '%env(GOOGLE_CLIENT_ID)%'
+    google.client_secret: '%env(GOOGLE_CLIENT_SECRET)%'
 
 services:
     # default configuration for services in *this* file
