--- a/config/packages/knpu_oauth2_client.yaml
+++ b/config/packages/knpu_oauth2_client.yaml
@@ -3,14 +3,14 @@ knpu_oauth2_client:
         # configure your clients as described here: https://github.com/knpuniversity/oauth2-client-bundle#configuration
         facebook:
             type: facebook
-            client_id: '%env(FACEBOOK_CLIENT_ID)%'
-            client_secret: '%env(FACEBOOK_CLIENT_SECRET)%'
+            client_id: '%facebook.client_id%'
+            client_secret: '%facebook.client_secret%'
             redirect_route: connect_facebook_check
             redirect_params: {}
             graph_api_version: v3.0
         google:
             type: google
-            client_id: '%env(GOOGLE_CLIENT_ID)%'
-            client_secret: '%env(GOOGLE_CLIENT_SECRET)%'
+            client_id: '%google.client_id%'
+            client_secret: '%google.client_secret%'
             redirect_route: connect_google_check
             redirect_params: {}
